fixed view transitions in contact page and added better scrollbar

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,6 +24,12 @@
   font-family: var(--font-poppins), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html {
+  scrollbar-gutter: stable;
+  scrollbar-width: thin;
+  scrollbar-color: var(--gray-3) transparent;
+}
+
 .body {
   background-color: var(--black);
   display: flex;
@@ -125,8 +131,8 @@ select {
 ::view-transition-old(page) {
   opacity: 1;
   animation: content-exit 600ms ease-out forwards;
-
 }
+
 ::view-transition-new(page) {
   opacity: 0;
   animation: content-enter 600ms ease-out forwards;
